[tool.poetry]
name = "geonius"
description = "Geonius is a daemonic script that allows Node Operators to automate their operations on geodefi Operator Marketplace"
version = "0.0.1"
authors = ["0xIceBear", "Crash Bandicoot"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<=3.10"
geodefi = "^2.1.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pylint = "==3.0.3"
ipykernel = "^6.29.4"
pytest = "^8.2.1"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["*/tests/*", "src/config/networks.py", "conftest.py"]
skips = ["B608"]

[tool.black]
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
