[tool.poetry]
version = "1.0.0"
name = "geonius"
description = "Geonius is a daemonic script that allows Node Operators to automate their operations on geodefi Operator Marketplace"
authors = ["0xIceBear", "Crash Bandicoot"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "scripts" }
]

[tool.poetry.dependencies]
python = ">=3.8,<=3.12"
geodefi = "3.0.5"
python-dotenv = "^1.0.1"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pylint = "==3.0.3"
ipykernel = "^6.29.4"
pytest = "^8.2.1"
black = "^24.4.2"
pyinstaller = "^6.9.0"

# we might need these for pipx git+https:// stuff
# [tool.poetry.scripts]
# run = "src.main:main"
# check-wallet = "scripts.check_wallet:main"
# increase-wallet = "scripts.increase_wallet:main"
# decrease-wallet = "scripts.decrease_wallet:main"
# change-maintainer = "scripts.change_maintainer:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
